actual start point of the repo(sorry for the undocumented commit :( )

--- a/src/index.html
+++ b/src/index.html
@@ -2,148 +2,171 @@
 <html>
 <head>
 	<meta>
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<link rel="stylesheet" type="text/css" href="../css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<script type="text/javascript" src="js/particles.js"></script>
 </head>
 <body>
-	<div class="header">
-		<div class="name">
-			<h3>scubed</h3>
-		</div>
-		<div class="nav">
-			<a href="#" class="link"><div>PROJECTS</div></a>
-		</div>
-	</div>
-
-	<div class="landing_container">
-		<div class="landing-text">
-			<h1>We make</h1>
-			<h1>We build</h1>
-			<h1 class="special">We design</h1>
+	<div class="home-container">
+		<div class="header">
+			<div class="name">
+				<h3>scubed</h3>
+			</div>
+			<div class="nav">
+				<a href="#" class="link"><div>PROJECTS</div></a>
+				<a href="#" class="link"><div>TECH</div></a>
+				<a href="#" class="link"><div>CONTACT</div></a>
+			</div>
 		</div>
 
-		<div class="svgs">
+		<div class="landing-container">
+			<div class="particlejs-background" id="particles-js">
 
-		</div>
-	</div>
+			</div>
+			<div class="landing-text">
+				<h1>We make</h1>
+				<h1>We build</h1>
+				<h1 class="special">We design</h1>
+			</div>
 
-	<div class="services-container">
-		<div class="headline">
-			<h1>Our services</h1>
-		</div>
-		<div class="services">
-			<div class="service">
-				<h2 class="service-name">WEB DESIGN</h2>
-				<div class="service-list">
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
+			<!-- nth-child was not working with mm. need to check -->
+			<div class="mm mm1">
+				<div class="parallax-img-container" id="testing">
+					<img class="parllax-img" src="../assets/dummy.jpg">
 				</div>
-				<a href="#">
-					<div class="learn more">
-						<span>Learn more</span>
+			</div>
+			<div class="mm mm2">
+				<div class="parallax-img-container" id="testing">
+					<img class="parllax-img" src="../assets/landing1.jpg">
+				</div>
+			</div>
+			<div class="mm mm3">
+				<div class="parallax-img-container" id="testing">
+					<img class="parllax-img" src="../assets/landing2.png">
+				</div>
+			</div>
+		</div>
+
+		<div class="services-container">
+			<div class="headline">
+				<h1>Our services</h1>
+			</div>
+			<div class="services">
+				<div class="service">
+					<h2 class="service-name">WEB DESIGN</h2>
+					<div class="service-list">
+						<li>- React/Vue</li>
+						<li>- REST/GraphQL API</li>
+						<li>- Full stack</li>
+						<li>- site design</li>
+						<li>- React/Vue</li>
+						<li>- REST/GraphQL API</li>
+						<li>- Full stack</li>
+						<li>- site design</li>
 					</div>
-				</a>
-			</div>
-			<div class="service">
-				<h2 class="service-name">WEB DESIGN</h2>
-				<div class="service-list">
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
 				</div>
-				<a href="#">
-					<div class="learn more">
-						<span>Learn more</span>
+				<div class="service">
+					<h2 class="service-name">NETWORKING</h2>
+					<div class="service-list">
+						<li>- Infrastructure design</li>
+						<li>- Hardware suggestion</li>
+						<li>- small scale hosting</li>
+						<li>- performance optimization</li>
+						<li>- network admin</li>
 					</div>
-				</a>
-			</div>
-			<div class="service">
-				<h2 class="service-name">WEB DESIGN</h2>
-				<div class="service-list">
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
-					<li>React/Vue</li>
-					<li>REST/GraphQL API</li>
-					<li>Full stack</li>
-					<li>site design</li>
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
 				</div>
-				<a href="#">
-					<div class="learn more">
-						<span>Learn more</span>
+				<div class="service">
+					<h2 class="service-name">OTHERS</h2>
+					<div class="service-list">
+						<li>- Game dev</li>
+						<li>- Android/iOS app dev</li>
+						<li>- Website to PWA</li>
+						<li>- chrome add on</li>
+						<li>- messenger bot </li>
 					</div>
-				</a>
-			</div>
-		</div>
-		<div class="svgs">
-
-		</div>
-	</div>
-
-	<div class="previous-projects">
-		<div class="headline">
-			<h1>Previous projects</h1>
-		</div>
-		<div class="projects">
-			<div class="project">
-				<h2 class="project-name">Electronics based startup</h2>
-				<div class="project-thumbnail">
-					<img src="../assets/project1.jpg">
-				</div>
-			</div>
-			<div class="project">
-				<h2 class="project-name">Same old Emma Watson</h2>
-				<div class="project-thumbnail">
-					<img src="../assets/project2.jpg">
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
-		<div class="svgs">
 
-		</div>
-	</div>
-
-	<div class="footer">
-		<div class="main-footer">
-			<div class="contact-info">
-				<div class="headline">
-					<h1>lets work together</h1>
+		<div class="previous-projects">
+			<div class="headline">
+				<h1>Previous projects</h1>
+			</div>
+			<div class="projects">
+				<div class="project">
+					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="project-thumbnail">
+						<img src="../assets/project1.jpg">
+					</div>
 				</div>
+				<div class="project">
+					<h2 class="project-name">Same old Emma<br>Watson</h2>
+					<div class="project-thumbnail">
+						<img src="../assets/project2.jpg">
+					</div>
+				</div>
+			</div>
+			<a href="#">
+				<div class="show-more">
+					<span>Show more</span>
+				</div>
+			</a>
+			<div class="svgs">
+
+			</div>
+		</div>
+		<div class="footer">
+			<div class="main-footer">
 				<div class="contact-info">
-					<h3><span>E-mail</span>- loremipsum@scubed.org</h3>
-					<h3><span>Call us</span>- +8801848333385</h3>
-					<h3><span>Address</span>- 3/7/1 johnson road, dhaka<br>&nbsp &nbsp &nbsp &nbsp nagar siddiqui plaza, B/11</h3>
+					<div class="headline">
+						<h1>lets work together</h1>
+					</div>
+					<div class="contact-info">
+						<h3><span>E-mail</span>- loremipsum@scubed.org</h3>
+						<h3><span>Call us</span>- +8801848333385</h3>
+						<h3><span>Address</span>- 3/7/1 johnson road, dhaka<br>&nbsp &nbsp &nbsp &nbsp nagar siddiqui plaza, B/11</h3>
+					</div>
+				</div>
+				<div class="about-us">
+					<div class="headline">
+						<h1>S<sup>3</sup></h1>
+					</div>
+					<div class="dscription">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sit voluptatum, aliquam, earum perferendis quae magnam ad illo dolore illum, praesentium aperiam at hic architecto fugiat ab error eligendi odio.
+					</div>
 				</div>
 			</div>
-			<div class="about-us">
-				<div class="headline">
-					<h1>S<sup>3</sup></h1>
-				</div>
-				<div class="dscription">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sit voluptatum, aliquam, earum perferendis quae magnam ad illo dolore illum, praesentium aperiam at hic architecto fugiat ab error eligendi odio.
-				</div>
+			<div class="social-links">
+				<a href="#"><img class="social-logo" src=""></a>
+				<a href="#"><img class="social-logo" src=""></a>
+				<a href="#"><img class="social-logo" src=""></a>
+				<a href="#"><img class="social-logo" src=""></a>
 			</div>
 		</div>
-		<div class="social-links">
-			<a href="#"><img class="social-logo" src=""></a>
-			<a href="#"><img class="social-logo" src=""></a>
-			<a href="#"><img class="social-logo" src=""></a>
-			<a href="#"><img class="social-logo" src=""></a>
+
+
+		<div class="test-ground">
+
 		</div>
+		<div class="spacer"></div>
+		<br><br><br><br><br><br>
+
 	</div>
+	<script type="text/javascript" src="js/index.js"></script>
 
-
-	<script type="text/javascript" src="index.js"></script>
 </body>
