added the skills section

--- a/src/index.html
+++ b/src/index.html
@@ -29,77 +29,122 @@
 				<h1 class="special">We design</h1>
 			</div>
 
+			<div class="fixed-animating-objects">
 			<!-- nth-child was not working with mm. need to check -->
-			<div class="mm mm1">
-				<div class="parallax-img-container" id="testing">
-					<img class="parllax-img" src="../assets/dummy.jpg">
+				<div class="mm mm1">
+					<div class="parallax-img-container" id="testing">
+						<img class="parallax-img" src="../assets/dummy.jpg">
+					</div>
 				</div>
-			</div>
-			<div class="mm mm2">
-				<div class="parallax-img-container" id="testing">
-					<img class="parllax-img" src="../assets/landing1.jpg">
+				<div class="mm mm2">
+					<div class="parallax-img-container" id="testing">
+						<img class="parallax-img" src="../assets/landing1.jpg">
+					</div>
 				</div>
-			</div>
-			<div class="mm mm3">
-				<div class="parallax-img-container" id="testing">
-					<img class="parllax-img" src="../assets/landing2.png">
+				<div class="mm mm3">
+					<div class="parallax-img-container" id="testing">
+						<img class="parallax-img" src="../assets/landing2.png">
+					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="services-container">
-			<div class="headline">
-				<h1>Our services</h1>
+		<div class="our-services" id="deving">
+			<div class="skills-container">
+				<div class="skill-container-title">Skills</div>
+				<div class="skill">
+					<h2 class="skill-name">WEB DESIGN</h2>
+					<div class="skill-list">
+						<li>&nbsp &nbsp React/Vue</li>
+						<li>&nbsp &nbsp REST/GraphQL API</li>
+						<li>&nbsp &nbsp Full stack</li>
+						<li>&nbsp &nbsp site design</li>
+						<li>&nbsp &nbsp React/Vue</li>
+						<li>&nbsp &nbsp REST/GraphQL API</li>
+						<li>&nbsp &nbsp Full stack</li>
+						<li>&nbsp &nbsp site design</li>
+					</div>
+					<!-- <a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a> -->
+				</div>
+				<div class="skill">
+					<h2 class="skill-name">NETWORKING</h2>
+					<div class="skill-list">
+						<li>&nbsp &nbsp  Infrastructure design</li>
+						<li>&nbsp &nbsp  Hardware suggestion</li>
+						<li>&nbsp &nbsp  small scale hosting</li>
+						<li>&nbsp &nbsp  performance optimization</li>
+						<li>&nbsp &nbsp  network admin</li>
+					</div>
+					<!-- <a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a> -->
+				</div>
+				<div class="skill">
+					<h2 class="skill-name">WEB DESIGN</h2>
+					<div class="skill-list">
+						<li>&nbsp &nbsp  React/Vue</li>
+						<li>&nbsp &nbsp  REST/GraphQL API</li>
+						<li>&nbsp &nbsp  Full stack</li>
+						<li>&nbsp &nbsp  site design</li>
+						<li>&nbsp &nbsp  React/Vue</li>
+						<li>&nbsp &nbsp  REST/GraphQL API</li>
+						<li>&nbsp &nbsp  Full stack</li>
+						<li>&nbsp &nbsp  site design</li>
+					</div>
+					<!-- <a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a> -->
+				</div>
+				<div class="skill">
+					<h2 class="skill-name">NETWORKING</h2>
+					<div class="skill-list">
+						<li>&nbsp &nbsp  Infrastructure design</li>
+						<li>&nbsp &nbsp  Hardware suggestion</li>
+						<li>&nbsp &nbsp  small scale hosting</li>
+						<li>&nbsp &nbsp  performance optimization</li>
+						<li>&nbsp &nbsp  network admin</li>
+					</div>
+					<!-- <a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a> -->
+				</div>
+				<div class="skill">
+					<h2 class="skill-name">OTHERS</h2>
+					<div class="skill-list">
+						<li>&nbsp &nbsp  Game dev</li>
+						<li>&nbsp &nbsp  Android/iOS app dev</li>
+						<li>&nbsp &nbsp  Website to PWA</li>
+						<li>&nbsp &nbsp  chrome add on</li>
+						<li>&nbsp &nbsp  messenger bot </li>
+					</div>
+					<!-- <a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a> -->
+				</div>
 			</div>
-			<div class="services">
-				<div class="service">
-					<h2 class="service-name">WEB DESIGN</h2>
-					<div class="service-list">
-						<li>- React/Vue</li>
-						<li>- REST/GraphQL API</li>
-						<li>- Full stack</li>
-						<li>- site design</li>
-						<li>- React/Vue</li>
-						<li>- REST/GraphQL API</li>
-						<li>- Full stack</li>
-						<li>- site design</li>
-					</div>
-					<a href="#">
-						<div class="learn-more">
-							<span>Learn more</span>
-						</div>
-					</a>
+
+			<div class="tech-container">
+				<div class="tech-container-title">tech and others</div>
+				<div class="text">
+					<p>consectetur deleniti labore et reprehenderit cum quas aut non alias itaque. Omnis nam tempore impedit culpa voluptatum.	Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis aut nesciunt architecto atque recusandae consectetur repellat odit dolorum suscipit culpa inventore iure sint rem illum iusto, aspernatur molestias magnam vitae!</p>
 				</div>
-				<div class="service">
-					<h2 class="service-name">NETWORKING</h2>
-					<div class="service-list">
-						<li>- Infrastructure design</li>
-						<li>- Hardware suggestion</li>
-						<li>- small scale hosting</li>
-						<li>- performance optimization</li>
-						<li>- network admin</li>
+				<a href="#">
+					<div class="more">
+						<span>more</span>
 					</div>
-					<a href="#">
-						<div class="learn-more">
-							<span>Learn more</span>
-						</div>
-					</a>
-				</div>
-				<div class="service">
-					<h2 class="service-name">OTHERS</h2>
-					<div class="service-list">
-						<li>- Game dev</li>
-						<li>- Android/iOS app dev</li>
-						<li>- Website to PWA</li>
-						<li>- chrome add on</li>
-						<li>- messenger bot </li>
-					</div>
-					<a href="#">
-						<div class="learn-more">
-							<span>Learn more</span>
-						</div>
-					</a>
-				</div>
+				</a>
 			</div>
 		</div>
 
@@ -170,3 +215,62 @@
 	<script type="text/javascript" src="js/index.js"></script>
 
 </body>
+
+<!--  abandoned peeps
+
+			<div class="services-container">
+			<div class="headline">
+				<h1>Our services</h1>
+			</div>
+			<div class="services">
+				<div class="service">
+					<h2 class="service-name">WEB DESIGN</h2>
+					<div class="service-list">
+						<li>- React/Vue</li>
+						<li>- REST/GraphQL API</li>
+						<li>- Full stack</li>
+						<li>- site design</li>
+						<li>- React/Vue</li>
+						<li>- REST/GraphQL API</li>
+						<li>- Full stack</li>
+						<li>- site design</li>
+					</div>
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
+				</div>
+				<div class="service">
+					<h2 class="service-name">NETWORKING</h2>
+					<div class="service-list">
+						<li>- Infrastructure design</li>
+						<li>- Hardware suggestion</li>
+						<li>- small scale hosting</li>
+						<li>- performance optimization</li>
+						<li>- network admin</li>
+					</div>
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
+				</div>
+				<div class="service">
+					<h2 class="service-name">OTHERS</h2>
+					<div class="service-list">
+						<li>- Game dev</li>
+						<li>- Android/iOS app dev</li>
+						<li>- Website to PWA</li>
+						<li>- chrome add on</li>
+						<li>- messenger bot </li>
+					</div>
+					<a href="#">
+						<div class="learn-more">
+							<span>Learn more</span>
+						</div>
+					</a>
+				</div>
+			</div>
+		</div>
+-->
