--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 			</div>
 		</div>
 
-		<div class="our-services" id="deving">
+		<div class="our-services">
 			<div class="skills-container">
 				<div class="skill-container-title">Skills</div>
 				<div class="skill">
@@ -148,7 +148,7 @@
 			</div>
 		</div>
 
-		<div class="previous-projects">
+		<div class="previous-projects" id="deving">
 			<div class="headline">
 				<h1>Previous projects</h1>
 			</div>
@@ -156,16 +156,35 @@
 				<div class="project">
 					<h2 class="project-name">Electronics based<br>startup</h2>
 					<div class="project-thumbnail">
-						<img src="../assets/project1.jpg">
+						<div class="parallax-img-container">
+							<img src="../assets/project2.jpg">
+						</div>
 					</div>
 				</div>
 				<div class="project">
-					<h2 class="project-name">Same old Emma<br>Watson</h2>
+					<h2 class="project-name">Electronics based<br>startup</h2>
 					<div class="project-thumbnail">
-						<img src="../assets/project2.jpg">
+						<div class="parallax-img-container">
+							<img src="../assets/landing2.png">
+						</div>
 					</div>
 				</div>
-			</div>
+				<div class="project">
+					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="project-thumbnail">
+						<div class="parallax-img-container">
+							<img src="../assets/project1.jpg">
+						</div>
+					</div>
+				</div>
+				<div class="project">
+					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="project-thumbnail">
+						<div class="parallax-img-container">
+							<img src="../assets/landing3.jpg">
+						</div>
+					</div>
+				</div>
 			<a href="#">
 				<div class="show-more">
 					<span>Show more</span>
