--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<script type="text/javascript" src="js/particles.js"></script>
+	<script type="text/javascript" src="js/smooth-scrollbar.js"></script>
 </head>
 <body>
 	<div class="home-container">
