added the straight line in previous projects. still have  to calculate the position adjustments of elements pushed away in Z axis

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 				<h3>scubed</h3>
 			</div>
 			<div class="nav">
-				<a href="#" class="link"><div>PROJECTS</div></a>
+				<a href="#deving" class="link"><div>PROJECTS</div></a>
 				<a href="#" class="link"><div>TECH</div></a>
 				<a href="#" class="link"><div>CONTACT</div></a>
 			</div>
@@ -149,21 +149,15 @@
 			</div>
 		</div>
 
-		<div class="previous-projects" id="deving">
+		<div class="previous-projects">
 			<div class="headline">
 				<h1>Previous projects</h1>
 			</div>
 			<div class="projects">
 				<div class="project">
-					<h2 class="project-name">Electronics based<br>startup</h2>
-					<div class="project-thumbnail">
-						<div class="parallax-img-container">
-							<img src="../assets/project2.jpg">
-						</div>
-					</div>
-				</div>
-				<div class="project">
-					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="spacer"></div>
+					<h3 class="project-name">Electronics based<br>startup</h3>
+					<div class="spacer"></div>
 					<div class="project-thumbnail">
 						<div class="parallax-img-container">
 							<img src="../assets/landing2.png">
@@ -171,7 +165,19 @@
 					</div>
 				</div>
 				<div class="project">
-					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="spacer"></div>
+					<h3 class="project-name">Electronics based<br>startup</h3>
+					<div class="spacer"></div>
+					<div class="project-thumbnail">
+						<div class="parallax-img-container">
+							<img src="../assets/landing2.png">
+						</div>
+					</div>
+				</div>
+				<div class="project">
+					<div class="spacer"></div>
+					<h3 class="project-name">Electronics based<br>startup</h3>
+					<div class="spacer"></div>
 					<div class="project-thumbnail">
 						<div class="parallax-img-container">
 							<img src="../assets/project1.jpg">
@@ -179,20 +185,20 @@
 					</div>
 				</div>
 				<div class="project">
-					<h2 class="project-name">Electronics based<br>startup</h2>
+					<div class="spacer"></div>
+					<h3 class="project-name">Electronics based<br>startup</h3>
+					<div class="spacer"></div>
 					<div class="project-thumbnail">
 						<div class="parallax-img-container">
 							<img src="../assets/landing3.jpg">
 						</div>
 					</div>
 				</div>
-			<a href="#">
-				<div class="show-more">
-					<span>Show more</span>
-				</div>
-			</a>
-			<div class="svgs">
-
+				<a href="#">
+					<div class="show-more" name="deving">
+						<span>Show more</span>
+					</div>
+				</a>
 			</div>
 		</div>
 		<div class="footer">
