added script to automatically correct position of 3d elements in XY plane, made the footer.

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
 				<h3>scubed</h3>
 			</div>
 			<div class="nav">
-				<a href="#deving" class="link"><div>PROJECTS</div></a>
-				<a href="#" class="link"><div>TECH</div></a>
-				<a href="#" class="link"><div>CONTACT</div></a>
+				<div class="link"><a href="#">Projects </a></div>
+				<div class="link"><a href="#"> Tech </a></div>
+				<div class="link"><a href="#"> Contact </a></div>
 			</div>
 		</div>
 
@@ -194,48 +194,48 @@
 						</div>
 					</div>
 				</div>
-				<a href="#">
-					<div class="show-more" name="deving">
+				<a href="#" class="show-more">
+					<div name="deving">
 						<span>Show more</span>
 					</div>
 				</a>
 			</div>
 		</div>
 		<div class="footer">
+			<div class="footer-back">
+				<img src="../assets/footer5.jpg"/>
+			</div>
 			<div class="main-footer">
-				<div class="contact-info">
-					<div class="headline">
-						<h1>lets work together</h1>
+				<div class="contact-info-container">
+					<div class="info">
+						<h3>E-mail</h3>
+						<span>loremipsum@scubed.org</span>
 					</div>
-					<div class="contact-info">
-						<h3><span>E-mail</span>- loremipsum@scubed.org</h3>
-						<h3><span>Call us</span>- +8801848333385</h3>
-						<h3><span>Address</span>- 3/7/1 johnson road, dhaka<br>&nbsp &nbsp &nbsp &nbsp nagar siddiqui plaza, B/11</h3>
+					<div class="info">
+						<h3>Call us</h3>
+						<span>+8801848333385</span>
+					</div>
+					<div class="info">
+						<h3>Address</h3>
+						<span>3/7/1 johnson road, dhaka nagar siddiqui plaza, B/11</span>
 					</div>
 				</div>
 				<div class="about-us">
 					<div class="headline">
 						<h1>S<sup>3</sup></h1>
 					</div>
-					<div class="dscription">
+					<div class="description">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sit voluptatum, aliquam, earum perferendis quae magnam ad illo dolore illum, praesentium aperiam at hic architecto fugiat ab error eligendi odio.
 					</div>
 				</div>
 			</div>
 			<div class="social-links">
-				<a href="#"><img class="social-logo" src=""></a>
-				<a href="#"><img class="social-logo" src=""></a>
-				<a href="#"><img class="social-logo" src=""></a>
-				<a href="#"><img class="social-logo" src=""></a>
+				<a href="#"><img class="social-logo" src="../assets/icons/facebook.png"></a>
+				<a href="#"><img class="social-logo" src="../assets/icons/github.png"></a>
+				<a href="#"><img class="social-logo" src="../assets/icons/twitter.png"></a>
+				<a href="#"><img class="social-logo" src="../assets/icons/linkedin.png"></a>
 			</div>
 		</div>
-
-
-		<div class="test-ground">
-
-		</div>
-		<div class="spacer"></div>
-		<br><br><br><br><br><br>
 
 	</div>
 	<script type="text/javascript" src="js/index.js"></script>
