fixed the 'show more' button in 'previous projects'

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
 					</div>
 				</div>
 				<a href="#" class="show-more">
-					<div name="deving">
+					<div>
 						<span>Show more</span>
 					</div>
 				</a>
