minor changes to font family and sizes

--- a/src/index.html
+++ b/src/index.html
@@ -4,37 +4,39 @@
 	<meta>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet"> -->
 	<script type="text/javascript" src="js/particles.js"></script>
 	<script type="text/javascript" src="js/smooth-scrollbar.js"></script>
+	<script type="text/javascript" src="js/scrollreveal.js"></script>
 </head>
 <body>
-	<div class="home-container">
-		<div class="header">
-			<div class="name">
-				<h3>scubed</h3>
-			</div>
-			<div class="nav">
-				<div class="link"><a href="#">Projects </a></div>
-				<div class="link"><a href="#"> Tech </a></div>
-				<div class="link"><a href="#"> Contact </a></div>
-			</div>
+
+	<div class="header">
+		<div class="name">
+			<h3>scubed</h3>
 		</div>
+		<div class="nav">
+			<div class="link"><a href="#">Projects </a></div>
+			<div class="link"><a href="#"> Tech </a></div>
+			<div class="link"><a href="#"> Contact </a></div>
+		</div>
+	</div>
+
+	<div class="home-container">
 
 		<div class="landing-container">
 			<div class="particlejs-background" id="particles-js">
 
 			</div>
 			<div class="landing-text">
-				<h1>We make</h1>
-				<h1>We build</h1>
-				<h1 class="special">We design</h1>
+				Lorem ipsum dolor sit amet lorem lorem Eius adipisci vitae omnis sit ut eaque voluptatem 
 			</div>
 
 			<div class="fixed-animating-objects">
 			<!-- nth-child was not working with mm. need to check -->
 				<div class="mm mm1">
 					<div class="parallax-img-container" id="testing">
-						<img class="parallax-img" src="../assets/dummy.jpg">
+						<img class="parallax-img" src="../assets/landing2.png">
 					</div>
 				</div>
 				<div class="mm mm2">
@@ -44,7 +46,7 @@
 				</div>
 				<div class="mm mm3">
 					<div class="parallax-img-container" id="testing">
-						<img class="parallax-img" src="../assets/landing2.png">
+						<img class="parallax-img" src="../assets/dummy.jpg">
 					</div>
 				</div>
 			</div>
