changed the smooth scrolling script to scrooth.js as the previous one wasn't working with scrollreveal.js

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 	<meta>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet"> -->
 	<script type="text/javascript" src="js/particles.js"></script>
-	<script type="text/javascript" src="js/smooth-scrollbar.js"></script>
+	<script type="text/javascript" src="js/scrooth.js"></script>
 	<script type="text/javascript" src="js/scrollreveal.js"></script>
 </head>
 <body>
