landing part of 'studio' page

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 	<meta>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/header.css">
 	<script type="text/javascript" src="js/particles.js"></script>
 	<script type="text/javascript" src="js/scrooth.js"></script>
 	<script type="text/javascript" src="js/scrollreveal.js"></script>
@@ -11,6 +12,7 @@
 <body>
 
 	<div class="header">
+		<div class="background"></div>
 		<div class="name">
 			<h3>scubed</h3>
 		</div>
