--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" type="text/css" href="../css/header.css">
     <link rel="stylesheet" type="text/css" href="../css/global.css">
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
-    <script type="text/javascript" src="../js/particles.js"></script>
+    <!-- <script type="text/javascript" src="../js/particles.js"></script>
     <script type="text/javascript" src="../js/scrooth.js"></script>
-    <script type="text/javascript" src="../js/scrollreveal.js"></script>
+    <script type="text/javascript" src="../js/scrollreveal.js"></script> -->
+    <script type="text/javascript" src="../js/two.js"></script>
 </head>
 <body>
 
@@ -32,7 +33,49 @@
             <div class="headline">
                 Studio <br> & vision
             </div>
-		</div>
+        </div>
+        <div class="about-container">
+            <div class="about-img">
+                <img src="../../assets/landing3.jpg">
+            </div>
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, 
+                    quibusdam provident quos inventore, et 
+                </p>
+            </div>
+        </div>
+        <div class="skills-pasion-container">
+            <div class="skills-container">
+                <p class="title">Skills</p>
+                <li>Strategy</li>
+                <li>Brand Identities</li>
+                <li>Print Design</li>
+                <li>UI/UX Design</li>
+                <li>Art Direction</li>
+                <li>Back End</li>
+                <li>Admin System</li>
+                <li>Front End</li>
+            </div>
+            <div class="passion-container">
+                <p class="title">Passion</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae veniam id eaque deserunt. Expedita ab dolore vel hic porro aut rerum voluptate quo qui iusto animi, facilis sit doloremque adipisci?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perspiciatis facere nostrum voluptates, blanditiis ut nemo iure ipsam neque cupiditate, voluptatibus repudiandae tenetur sunt officiis maiores excepturi cum at mollitia?
+                </p>
+            </div>
+        </div>
+        <div class="special-text-container">
+            <div class="anim-container">
+
+            </div>
+            <div class="special-img">
+                <img src="../../assets/landing3.jpg">
+            </div>
+            <div class="special-text">
+                At the heart of our work, the constant search for the juncture between aesthetics and technical performances.
+            </div>
+        </div>
     </div>
+
+    <script type="text/javascript" src="../js/projects.js"></script>
 
 </body>
