halfway through the studio page

--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -74,6 +74,20 @@
                 At the heart of our work, the constant search for the juncture between aesthetics and technical performances.
             </div>
         </div>
+        <div class="post-special-text">
+            <div class="text-container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae veniam id eaque deserunt. Expedita ab dolore vel hic porro aut rerum voluptate quo qui iusto animi, facilis sit doloremque adipisci?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque perspiciatis facere nostrum voluptates, blanditiis ut nemo iure ipsam neque cupiditate, voluptatibus repudiandae tenetur sunt officiis maiores excepturi cum at mollitia?
+            </div>
+        </div>
+        <div class="origin-container">
+            <div class="mouse"></div>
+            <div class="origin">
+                <p class="title">Origin</p>
+                <p>Rezo Zero is an anagram with reference to the binary language. Zero serves as a starting point, the basic element of digital; a circle in perpetual movement that invites creative exploration.
+                </p>
+            </div>
+        </div>
     </div>
 
     <script type="text/javascript" src="../js/projects.js"></script>
