--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -64,14 +64,12 @@
             </div>
         </div>
         <div class="special-text-container">
-            <div class="anim-container">
-
-            </div>
             <div class="special-img">
                 <img src="../../assets/landing3.jpg">
             </div>
             <div class="special-text">
-                At the heart of our work, the constant search for the juncture between aesthetics and technical performances.
+                <div class="cursor"></div>
+                <p>At the heart of our work, the constant search for the juncture between aesthetics and technical performances.</p>
             </div>
         </div>
         <div class="post-special-text">
@@ -81,11 +79,40 @@
             </div>
         </div>
         <div class="origin-container">
-            <div class="mouse"></div>
+            <div class="cursor"></div>
             <div class="origin">
                 <p class="title">Origin</p>
                 <p>Rezo Zero is an anagram with reference to the binary language. Zero serves as a starting point, the basic element of digital; a circle in perpetual movement that invites creative exploration.
                 </p>
+            </div>
+        </div>
+        <div class="team-container">
+            <div class="title">Core team</div>
+            <div class="team-members">
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev</div>
+                </div>
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev | Founder</div>
+                </div>
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev</div>
+                </div>
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev | Founder</div>
+                </div>
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev</div>
+                </div>
+                <div class="member">
+                    <div class="name">Julias ceaser</div>
+                    <div class="designation">Lead Front dev | Founder</div>
+                </div>
             </div>
         </div>
     </div>
