--- a/src/projects/projects.html
+++ b/src/projects/projects.html
@@ -4,12 +4,9 @@
     <meta>
     <link rel="stylesheet" type="text/css" href="../css/projects.css">
     <link rel="stylesheet" type="text/css" href="../css/header.css">
+    <link rel="stylesheet" type="text/css" href="../css/footer.css">
     <link rel="stylesheet" type="text/css" href="../css/global.css">
     <link rel="stylesheet" type="text/css" href="../css/fonts.css">
-    <!-- <script type="text/javascript" src="../js/particles.js"></script>
-    <script type="text/javascript" src="../js/scrooth.js"></script>
-    <script type="text/javascript" src="../js/scrollreveal.js"></script> -->
-    <script type="text/javascript" src="../js/two.js"></script>
 </head>
 <body>
 
@@ -90,31 +87,66 @@
             <div class="title">Core team</div>
             <div class="team-members">
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev</div>
                 </div>
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev | Founder</div>
                 </div>
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev</div>
                 </div>
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev | Founder</div>
                 </div>
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev</div>
                 </div>
                 <div class="member">
-                    <div class="name">Julias ceaser</div>
+                    <div class="name">Julias caeser</div>
                     <div class="designation">Lead Front dev | Founder</div>
                 </div>
             </div>
         </div>
+        <div class="footer">
+                <div class="footer-back">
+                    <img src="../assets/footer5.jpg"/>
+                </div>
+                <div class="main-footer">
+                    <div class="contact-info-container">
+                        <div class="info">
+                            <h3>E-mail</h3>
+                            <span>loremipsum@scubed.org</span>
+                        </div>
+                        <div class="info">
+                            <h3>Call us</h3>
+                            <span>+8801848333385</span>
+                        </div>
+                        <div class="info">
+                            <h3>Address</h3>
+                            <span>3/7/1 johnson road, dhaka nagar siddiqui plaza, B/11</span>
+                        </div>
+                    </div>
+                    <div class="about-us">
+                        <div class="headline">
+                            <h1>S<sup>3</sup></h1>
+                        </div>
+                        <div class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum sit voluptatum, aliquam, earum perferendis quae magnam ad illo dolore illum, praesentium aperiam at hic architecto fugiat ab error eligendi odio.
+                        </div>
+                    </div>
+                </div>
+                <div class="social-links">
+                    <a href="#"><img class="social-logo" src="../assets/icons/facebook.png"></a>
+                    <a href="#"><img class="social-logo" src="../assets/icons/github.png"></a>
+                    <a href="#"><img class="social-logo" src="../assets/icons/twitter.png"></a>
+                    <a href="#"><img class="social-logo" src="../assets/icons/linkedin.png"></a>
+                </div>
+            </div>
     </div>
 
     <script type="text/javascript" src="../js/projects.js"></script>
