cant get swup to work :(

--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,25 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/pagetransitions.css">
 	<script type="text/javascript" src="js/particles.js"></script>
 	<script type="text/javascript" src="js/scrooth.js"></script>
 	<script type="text/javascript" src="js/scrollreveal.js"></script>
+	<script type="text/javascript" src="js/swup.js"></script>
 </head>
 <body>
-
+	<main id="swup" class="transition-swipeup">
 	<div class="header">
 		<div class="background"></div>
 		<div class="name">
 			<h3>scubed</h3>
 		</div>
 		<div class="nav">
-			<div class="link"><a href="#">Projects </a></div>
-			<div class="link"><a href="#"> Tech </a></div>
-			<div class="link"><a href="#"> Contact </a></div>
+			<div class="link"><a href="/projects/projects.html">Projects </a></div>
+			<div class="link"><a href=""> Tech </a></div>
+			<div class="link"><a href=""> Contact </a></div>
 		</div>
 	</div>
-
 	<div class="home-container">
 
 		<div class="landing-container">
@@ -238,9 +239,11 @@
 				<a href="#"><img class="social-logo" src="../assets/icons/linkedin.png"></a>
 			</div>
 		</div>
-
 	</div>
+	</main>
+
 	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="js/router.js"></script>
 
 </body>
 
